...
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_medium" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/widgetContainerMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
...
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#f33e6f"
                android:textSize="11sp"/>

            <RelativeLayout
                android:id="@+id/bottomButtonContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight=".8"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/btnContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="horizontal">
...
