...
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
...
